[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
macroquad = "0.4"

# Unfortuntely features can not remove a dependency
# and feature unification in a workspace means we can not
# use two opposite features here. So we'll just have a game
# dependency we can't reference in hotload paths
# This is a bit of a footgun :(
game = { path = "../game" }

wasmtime = { version = "21.0.1", features = [
    "component-model",
], optional = true }
wasmtime-wasi = { version = "21.0.1", optional = true }
notify-debouncer-full = { version = "0.3.1", optional = true }
notify = { version = "6.1.1", optional = true }

[features]
hotreload = [
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:notify-debouncer-full",
    "dep:notify",
]
