[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
macroquad = "0.4"

# Unfortuntely features can not remove a dependency.
# We could look at two inverse feature flags now that
# we have simplified the crate hierarchy
# This is a bit of a footgun :(
game = { path = "../game" }

wasmtime = { version = "21.0.1", features = [
    "component-model",
], optional = true }
wasmtime-wasi = { version = "21.0.1", optional = true }
notify-debouncer-full = { version = "0.3.1", optional = true }
notify = { version = "6.1.1", optional = true }

[features]
hotreload = [
    "dep:wasmtime",
    "dep:wasmtime-wasi",
    "dep:notify-debouncer-full",
    "dep:notify",
]
